--- a/CSapp/templates/CSapp/shopping_cart.html
+++ b/CSapp/templates/CSapp/shopping_cart.html
@@ -36,7 +36,7 @@
                         <tr>
                             <td colspan="3"></td>
                             <td>Total:</td>
-                            <td>{{ shopping_total }}</td>
+                            <td>{{ order_total }}</td>
                         </tr>
                     </tfoot>
                 </table></br>
