--- a/products_app/templates/products_app/product.html
+++ b/products_app/templates/products_app/product.html
@@ -8,7 +8,7 @@
         <div class="col">
             <div class="row">
                 <h5 class="card-title">{{ product.name }} | <span class="text-success">Available: {{product.available_quantity}}</span></h5>
-                <h5 class="card-title text-danger">Price: {{ product.price }}</h5>
+                <h5 class="card-title text-danger">Price: {{ product.price }} euro</h5>
                 <p class="card-text"><p> {{product.description}}</p>
                 <p class="card-text"><p>Materials: {{product.materials}}</p>
                 <p class="card-text"><small class="text-muted">Rarity: {{ product.rarity }} </small></p>
