--- a/CSapp/templates/CSapp/navbar.html
+++ b/CSapp/templates/CSapp/navbar.html
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
-          <a class="nav-link active" aria-current="page" href="/products_app:products">Products</a>
+          <a class="nav-link active" aria-current="page" href="{% url 'products_app:products' %}">Products</a>
           <a class="nav-link active" aria-current="page" href="{% url 'CSapp:contact' %}">Contact</a>
           {% if user.is_authenticated %}
             <a class="nav-link" href="{#}" title="Logout"> Hi, {{user.username}}
