--- a/products_app/templates/products_app/product.html
+++ b/products_app/templates/products_app/product.html
@@ -13,7 +13,7 @@
                 <p class="card-text"><p>Materials: {{product.materials}}</p>
                 <p class="card-text"><small class="text-muted">Rarity: {{ product.rarity }} </small></p>
             </div>
-            {% if user %}
+            {% if user.is_authenticated %}
                 <a href="{% url 'CSapp:add_to_cart' product_id=product.id %}">
                     <button class="btn-custom-reverse spaced-top-2">Add to cart</button>
                 </a>
