--- a/CSapp/templates/CSapp/navbar.html
+++ b/CSapp/templates/CSapp/navbar.html
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" href="{% url 'products_app:products' %}">Products</a>
           <a class="nav-link active" aria-current="page" href="{% url 'CSapp:contact' %}">Contact</a>
           {% if user.is_authenticated %}
-            <a class="nav-link" href="{#}" title="Logout"> Hi, {{user.username}}
+            <a class="nav-link" href="#" title="Logout"> Hi, {{user.username}}
               <i class="fas fa-user"></i>
             </a>
             <form class="nav-link" action="{% url 'accounts_app:logout' %}" method="POST">
