--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,6 +32,7 @@
     background-color: #FF8C00;
     padding: 10px 40px;
     border: 2px solid #FF6C00;
+    border-radius: 20px;
     color: #822739;
 }
 
